--- a/views/about.html
+++ b/views/about.html
@@ -24,7 +24,7 @@
         </div>
         <section class="grid2">
         <div class="info" style="font-size:18px">
-            <p>Hi! My name is Dillon - it's nice to meet you. I'm a third year engineering student at Northeastern University, planning on graduating in spring of 2026 with a bachelor's degree in Mechanical Engineering and Physics. I got interested in engineering and physics through my love of math and problem solving.</p>
+            <p>Hi! My name is Dillon - it's nice to meet you. I'm a fourth year engineering student at Northeastern University, planning on graduating in spring of 2026 with a bachelor's degree in Mechanical Engineering and Physics. I got interested in engineering and physics through my love of math and problem solving.</p>
             </br>
             <p> This past spring, I worked for six months as an electro-mechanical engineering co-op at <a href="https://www.clarapath.com/" target="_blank">Clarapath</a>, a small medical robotics start up company. There I was able to refine my skills in 3d printing, machining, and electrical engineering, along with countless others. Before that I volunteered at <a href="https://www.bostonbuildingresources.com/" target="_blank">Boston Building Resources</a>, a hardware store which recycles used building materials to make home improvement more affordable for the average family.</p>
             </br>
